# fastapi_template

./: .gitignore  pyproject.toml
fruit/: main.py
fruit/src/: data.py  models.py  service.py  utils.py
